syntax = "proto3";
option csharp_namespace = "PbxApiControl";
package contact;
import "google/protobuf/wrappers.proto";

// Сервис для управления контактами PBX.
service ContactPbxService {
  
  // Получает информацию о контакте по его идентификатору.
  rpc GetContactInfoById(GetContactInfoByIdRequest) returns (ContactInfoDataReply);

  // Обновляет информацию о контакте по его идентификатору.
  rpc UpdateContactInfoById(UpdateContactInfoRequest) returns (ContactInfoDataReply);

  // Получает список контактов с указанием номера страницы и размера страницы.
  rpc GetContactList(GetContactListRequest) returns (ContactListReply);
  
  // Удаляет контакт по его идентификатору.
  rpc DeleteContactById(DeleteContactByIdRequest) returns (ContactInfoDataReply);
}

// Запрос для получения информации о контакте по его идентификатору.
message GetContactInfoByIdRequest {
  // Идентификатор контакта.
  string contact_id = 1;
}

// Запрос для получения списка контактов.
message GetContactListRequest {
  // Номер страницы для получения списка контактов.
  int32 page_number = 1;

  // Количество контактов на странице.
  int32 page_size = 2;
}

// Ответ на запрос получения списка контактов.
message ContactListReply {
  // Список данных о контактах.
  repeated ContactInfoDataReply contacts = 1;

  // Номер текущей страницы.
  int32 page_number = 2;

  // Размер страницы (количество контактов на странице).
  int32 page_size = 3;

  // Общее количество контактов.
  int32 total_count = 4;
}

// Запрос для обновления информации о контакте по его идентификатору.
message UpdateContactInfoRequest {
  // Идентификатор контакта для обновления.
  string contact_id = 1;

  // Имя контакта.
  google.protobuf.StringValue first_name = 2;

  // Фамилия контакта.
  google.protobuf.StringValue last_name = 3;

  // Мобильный телефон контакта.
  google.protobuf.StringValue mobile = 4;

  // Название компании контакта.
  google.protobuf.StringValue company_name = 5;

  // Данные CRM для контакта.
  google.protobuf.StringValue crm_contact_data = 6;

  // Тег для контакта.
  google.protobuf.StringValue tag = 7;

  // Второй мобильный телефон контакта.
  google.protobuf.StringValue mobile_two = 8;

  // Домашний телефон контакта.
  google.protobuf.StringValue home = 9;

  // Второй домашний телефон контакта.
  google.protobuf.StringValue home_two = 10;

  // Рабочий телефон контакта.
  google.protobuf.StringValue business = 11;

  // Второй рабочий телефон контакта.
  google.protobuf.StringValue business_two = 12;

  // Адрес электронной почты контакта.
  google.protobuf.StringValue email_address = 13;

  // Другие данные о контакте.
  google.protobuf.StringValue other = 14;

  // Факс на рабочем месте контакта.
  google.protobuf.StringValue business_fax = 15;

  // Домашний факс контакта.
  google.protobuf.StringValue home_fax = 16;

  // Пейджер контакта.
  google.protobuf.StringValue pager = 17;
}

// Запрос для удаления контакта по его идентификатору.
message DeleteContactByIdRequest {
  // Идентификатор контакта для удаления.
  string contact_id = 1;
}

// Ответ на запрос получения данных о контакте.
message ContactInfoDataReply {
  // Идентификатор контакта.
  string contact_id = 1;

  // Имя контакта.
  string first_name = 2;

  // Фамилия контакта.
  string last_name = 3;

  // Мобильный телефон контакта.
  string mobile = 4;

  // Название компании контакта.
  string company_name = 5;

  // Данные CRM для контакта.
  string crm_contact_data = 6;

  // Тег для контакта.
  string tag = 7;

  // Второй мобильный телефон контакта.
  string mobile_two = 8;

  // Домашний телефон контакта.
  string home = 9;

  // Второй домашний телефон контакта.
  string home_two = 10;

  // Рабочий телефон контакта.
  string business = 11;

  // Второй рабочий телефон контакта.
  string business_two = 12;

  // Адрес электронной почты контакта.
  string email_address = 13;

  // Другие данные о контакте.
  string other = 14;

  // Факс на рабочем месте контакта.
  string business_fax = 15;

  // Домашний факс контакта.
  string home_fax = 16;

  // Пейджер контакта.
  string pager = 17;
}